[package]
name = "libra-wallet"
version = "0.1.0"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

clap = { version = "4.2.4", features = ["derive"] }
ol-keys = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
